[tool.poetry]
name = "noisebridge_steg_1"
version = "0.1.0"
description = ""
authors = ["chipfranzen <chip.franzen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
steganos = {git = "https://github.com/fastforwardlabs/steganos.git"}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
